--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,6 +52,7 @@ nav {
     height: 40px;
     padding: 20px 0 0 10px;
     font-size: 18ox;
+    margin-bottom: 40px;
 }
 
 nav li {
@@ -144,4 +145,11 @@ ul.success li {
     background-color: #dff0d8;
     border-color: #d6e9c6;
     list-style: none;
+}
+
+footer {
+    margin-top: 40px;
+    text-align: center;
+    height: 30px;
+    border-top: 1px solid #ccc;
 }
